add bike sales dashboard project

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 14, 2017</span> -->
-										<h2><a href="#">AMAZON WEB SCRAPER WITH PYTHON</a></h2>
+										<h2><a href="#">Bike Sales Dashboard</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/amazon_img.jpg" alt="" /></a>
-									<p>In this project we scrape data from Amazon to analyze price data for products.</p>
+									<p>In this project we use dataset of bike_sales to analyze average income per purchase, customer age group who purchase the products.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
